// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/update/locked-dependency/common/parent-version getLockedDependencies() finds indirect dependency 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.npmjs.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/send",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.npmjs.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/express",
  },
]
`;

exports[`manager/npm/update/locked-dependency/common/parent-version getLockedDependencies() finds removed dependencies 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.npmjs.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/buffer-crc32",
  },
]
`;

exports[`manager/npm/update/locked-dependency/common/parent-version getLockedDependencies() finds when a greater version is needed 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.npmjs.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/qs",
  },
]
`;

exports[`manager/npm/update/locked-dependency/common/parent-version getLockedDependencies() finds when a range matches greater versions 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.npmjs.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/type-is",
  },
]
`;

exports[`manager/npm/update/locked-dependency/common/parent-version getLockedDependencies() returns null if no matching 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.npmjs.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/debug",
  },
]
`;
